# llm_fine_tuning

./: .gitignore  ReadMe.md  fs.md  pyproject.toml  req.txt
backend/: .env  .env.example  Dockerfile  docker-compose.yml  info.txt  log4j2.properties  requirements.txt  scraped_Artificial_Intelligence.json
backend/app/: main.py
backend/app/api/: models.py  websocket.py
backend/app/common/: enums.py  job_models.py
backend/app/config/: config_provider.py  default_settings.json  settings.json
backend/app/controllers/: base_controller.py  data_collection_controller.py  deployment_controller.py  general_controller.py  optimization_controller.py  pipeline_controller.py  preprocessing_controller.py  settings_controller.py  tokenization_controller.py  training_controller.py
backend/app/core/: config.py  exceptions.py  logging_config.py  spark_manager.py
backend/app/dependencies/: controller.py
backend/app/utils/: helpers.py  validators.py
backend/data/raw/: test.csv
backend/tests/: conftest.py
data/: data.txt
docs/: INFO.md
frontend/: .dockerignore  .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Error.jsx  index.css  main.jsx
scripts/: start_backend.sh  start_frontend.sh
src/classical/: attention.py  test.csv  text_models.py
src/decoders/: base.py  deterministic.py  stocastic.py
src/deployment/: optim.py  serve.py
src/evaluation/: eval.py
src/fine_tuning/: tune.py
src/model/: classic.py  transformer.py
src/pipelines/: main.py
src/rag/: rag.py
(+167 files in other folders)
